@@ -1,6 +1,6 @@
 {
   "name": "enemyracemanager",
-  "version": "2.0.25",
+  "version": "2.0.26",
   "date": "2021-07-10",
   "title": "Enemy Race Manager",
   "author": "heyqule",
