@@ -41,8 +41,8 @@ script.on_event(defines.events.on_player_created, function(event)
     scenarios_helper.build_base(surface, normal_base_1_1, 0, 0)
     scenarios_helper.set_tech_level(force, level)
     scenarios_helper.set_attack_points(999999)
-    scenarios_helper.set_attack_points(999999)
-    scenarios_helper.set_attack_points(999999)
+    --scenarios_helper.set_attack_points(999999)
+    --scenarios_helper.set_attack_points(999999)
     --scenarios_helper.set_attack_points(-999999)
     scenarios_helper.set_enemy_params(enemy_level, 1, 1)
     scenarios_helper.set_game_speed(1)
